--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "shadcn:add": "npx shadcn-ui@latest add"
   },
   "dependencies": {
     "@prisma/client": "^5.6.0",
@@ -24,6 +25,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.299.0",
     "next": "^14.0.3",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
