Major theming and nav bar
Add new favicon and icon files, update component aliases and page
component, modify Tailwind config, add font and site config files, update package dependencies, add new types, and create mode toggle component and MDX styles.

Themes and layout based on `shadcn/ui`

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,11 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/components/*": [
+        "./src/app/_components/*",
+        "./src/app/_components/ui/*"
+      ]
     }
   },
   "include": [
