--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "shadcn:add": "npx shadcn-ui@latest add"
   },
   "dependencies": {
+    "@clerk/nextjs": "^4.29.1",
     "@prisma/client": "^5.6.0",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
